force-app/main/default/objects/Opportunity/fields/Account_Manager_Intro_Call__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Intro_Call__c</fullName>
    <label>Account Manager Intro Call</label>
    <type>Date</type>
</CustomField>