force-app/main/default/objects/Opportunity/fields/Adding_Additional_Comps_To_Cover_Coaches__c.field-meta.xml
<CustomField>
    <fullName>Adding_Additional_Comps_To_Cover_Coaches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adding Additional Comps To Cover Coaches</label>
    <type>Checkbox</type>
</CustomField>