force-app/main/default/objects/Opportunity/fields/Additional_Comp_Amount_To_Cover_Coaches__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comp_Amount_To_Cover_Coaches__c</fullName>
    <label>Additional Comp Amount To Cover Coaches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>