force-app/main/default/objects/Opportunity/fields/Additional_Drafts_Feedback_From_Coach__c.field-meta.xml
<CustomField>
    <fullName>Additional_Drafts_Feedback_From_Coach__c</fullName>
    <label>Additional Drafts - Feedback From Coach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>