force-app/main/default/objects/Opportunity/fields/Air_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Air_Arrival_Date__c</fullName>
    <label>Air Arrival Date</label>
    <type>Date</type>
</CustomField>