force-app/main/default/objects/Opportunity/fields/Air_Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Air_Booking_Notes__c</fullName>
    <label>Air Booking Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>