force-app/main/default/objects/Opportunity/fields/Air_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Air_Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Contract Signed</label>
    <type>Checkbox</type>
</CustomField>