force-app/main/default/objects/Opportunity/fields/Air_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Air_Departure_Date__c</fullName>
    <label>Air Departure Date</label>
    <type>Date</type>
</CustomField>