force-app/main/default/objects/Opportunity/fields/Air_Inventory_2nd_Flight__c.field-meta.xml
<CustomField>
    <fullName>Air_Inventory_2nd_Flight__c</fullName>
    <label>Air Inventory</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>