force-app/main/default/objects/Opportunity/fields/Air_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Air_Inventory__c</fullName>
    <label>Air Inventory</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>