force-app/main/default/objects/Opportunity/fields/Air_Status__c.field-meta.xml
<CustomField>
    <fullName>Air_Status__c</fullName>
    <label>Air Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquired</fullName>
            </value>
            <value>
                <fullName>Needs Revision</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>