force-app/main/default/objects/Opportunity/fields/Airfare_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Airfare_Purchase_Price__c</fullName>
    <label>Total Cost of Groups Airfare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>