force-app/main/default/objects/Opportunity/fields/Airline_2nd_Flight__c.field-meta.xml
<CustomField>
    <fullName>Airline_2nd_Flight__c</fullName>
    <description>Airline for the second flight when everyone does not fit on the first flight.</description>
    <label>Airline 2nd Flight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>