force-app/main/default/objects/Opportunity/fields/Airline_Documents_Sent_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Airline_Documents_Sent_To_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Airline Documents Sent To Client</label>
    <type>Checkbox</type>
</CustomField>