force-app/main/default/objects/Opportunity/fields/Airline_Manifest_Complete__c.field-meta.xml
<CustomField>
    <fullName>Airline_Manifest_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Airline Manifest Complete</label>
    <type>Checkbox</type>
</CustomField>