force-app/main/default/objects/Opportunity/fields/Airline_Manifest_Due__c.field-meta.xml
<CustomField>
    <fullName>Airline_Manifest_Due__c</fullName>
    <label>Airline Manifest Due</label>
    <type>Date</type>
</CustomField>