force-app/main/default/objects/Opportunity/fields/Airline_Ticketing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Airline_Ticketing_Fee__c</fullName>
    <description>Fee we charge for ticketing the flights</description>
    <label>Airline Ticketing Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>