force-app/main/default/objects/Opportunity/fields/Andretti__c.field-meta.xml
<CustomField>
    <fullName>Andretti__c</fullName>
    <label>Andretti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>