force-app/main/default/objects/Opportunity/fields/Application_Received__c.field-meta.xml
<CustomField>
    <fullName>Application_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Received</label>
    <type>Checkbox</type>
</CustomField>