force-app/main/default/objects/Opportunity/fields/Arrival_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport_Code__c</fullName>
    <description>This is the airport the group will be landing at to start their trip</description>
    <label>Arrival Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>