force-app/main/default/objects/Opportunity/fields/Arriving_Separate_From_The_Team__c.field-meta.xml
<CustomField>
    <fullName>Arriving_Separate_From_The_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arriving Separate From The Team</label>
    <type>Checkbox</type>
</CustomField>