force-app/main/default/objects/Opportunity/fields/Athletes_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Athletes_Date_of_Birth__c</fullName>
    <label>Athlete&apos;s Date of Birth</label>
    <type>Date</type>
</CustomField>