force-app/main/default/objects/Opportunity/fields/Athletes_On_Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>Athletes_On_Auto_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Athletes On Auto-Pay</label>
    <type>Checkbox</type>
</CustomField>