force-app/main/default/objects/Opportunity/fields/AutoPay__c.field-meta.xml
<CustomField>
    <fullName>AutoPay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if  customer signed up for automatic payments, payments will be proceed automatically on dates.</description>
    <label>AutoPay</label>
    <type>Checkbox</type>
</CustomField>