force-app/main/default/objects/Opportunity/fields/Baggage_Info__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Info__c</fullName>
    <label>Baggage Info</label>
    <type>TextArea</type>
</CustomField>