force-app/main/default/objects/Opportunity/fields/Blue_Man_Group__c.field-meta.xml
<CustomField>
    <fullName>Blue_Man_Group__c</fullName>
    <label>Blue Man Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>