force-app/main/default/objects/Opportunity/fields/Board_Approval_Received__c.field-meta.xml
<CustomField>
    <fullName>Board_Approval_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Approval Received</label>
    <type>Checkbox</type>
</CustomField>