force-app/main/default/objects/Opportunity/fields/Cancellation_Within_120_Hours_of_Depart__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Within_120_Hours_of_Depart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day of Travel Cancellation</label>
    <type>Checkbox</type>
</CustomField>