force-app/main/default/objects/Opportunity/fields/Celebration_of_Athletes__c.field-meta.xml
<CustomField>
    <fullName>Celebration_of_Athletes__c</fullName>
    <label>Celebration of Athletes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>