force-app/main/default/objects/Opportunity/fields/Coaches_Pin__c.field-meta.xml
<CustomField>
    <fullName>Coaches_Pin__c</fullName>
    <label>Coaches Pin</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>