force-app/main/default/objects/Opportunity/fields/Code_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Code_Auto_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Code Auto Number</label>
    <type>AutoNumber</type>
</CustomField>