force-app/main/default/objects/Opportunity/fields/Communication_History__c.field-meta.xml
<CustomField>
    <fullName>Communication_History__c</fullName>
    <label>Communication History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>