force-app/main/default/objects/Opportunity/fields/Competition_Feedback_From_Previous_Trip__c.field-meta.xml
<CustomField>
    <fullName>Competition_Feedback_From_Previous_Trip__c</fullName>
    <label>Competition Feedback From Previous Trip</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>