force-app/main/default/objects/Opportunity/fields/Competition_Feedback_Received_2nd_Draft__c.field-meta.xml
<CustomField>
    <fullName>Competition_Feedback_Received_2nd_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competition Feedback Received 2nd Draft</label>
    <type>Checkbox</type>
</CustomField>