force-app/main/default/objects/Opportunity/fields/Competition_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Competition_Schedule_Status__c</fullName>
    <label>Competition Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule Request Call Complete</fullName>
            </value>
            <value>
                <fullName>1st Draft Sent</fullName>
            </value>
            <value>
                <fullName>FD Positive Feedback</fullName>
            </value>
            <value>
                <fullName>FD Adjustments Needed</fullName>
            </value>
            <value>
                <fullName>2nd Draft Sent</fullName>
            </value>
            <value>
                <fullName>3rd Draft Sent</fullName>
            </value>
            <value>
                <fullName>4th Draft Sent</fullName>
            </value>
            <value>
                <fullName>Additional Adjustments Needed</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>