force-app/main/default/objects/Opportunity/fields/Competitive_Level_1_10__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Level_1_10__c</fullName>
    <label>Competitive Level 1-10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>