force-app/main/default/objects/Opportunity/fields/Date_of_Birth_Pax1__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Pax1__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>