force-app/main/default/objects/Opportunity/fields/Deaprture_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Deaprture_Airport_Code__c</fullName>
    <label>Departure Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>