force-app/main/default/objects/Opportunity/fields/DeletedData__c.field-meta.xml
<CustomField>
    <fullName>DeletedData__c</fullName>
    <label>DeletedData</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>