force-app/main/default/objects/Opportunity/fields/Departing_Separate_From_The_Team__c.field-meta.xml
<CustomField>
    <fullName>Departing_Separate_From_The_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Departing Separate From The Team</label>
    <type>Checkbox</type>
</CustomField>