force-app/main/default/objects/Opportunity/fields/Departure_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Departure_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Departure Call Complete</label>
    <type>Checkbox</type>
</CustomField>