force-app/main/default/objects/Opportunity/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <description>Date the Team departs to go home</description>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>