force-app/main/default/objects/Opportunity/fields/Departure_Documents_Sent__c.field-meta.xml
<CustomField>
    <fullName>Departure_Documents_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Departure Documents Sent</label>
    <type>Checkbox</type>
</CustomField>