force-app/main/default/objects/Opportunity/fields/Departuretime__c.field-meta.xml
<CustomField>
    <fullName>Departuretime__c</fullName>
    <label>Departure Time</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>