force-app/main/default/objects/Opportunity/fields/Deposit_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Received_Date__c</fullName>
    <label>Deposit Received Date</label>
    <type>Date</type>
</CustomField>