force-app/main/default/objects/Opportunity/fields/Disney_Educational_Program__c.field-meta.xml
<CustomField>
    <fullName>Disney_Educational_Program__c</fullName>
    <description>Disney Youth Educational Tours</description>
    <label>Disney Educational Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Animation Academy</fullName>
            </value>
            <value>
                <fullName>Cell Animation</fullName>
            </value>
            <value>
                <fullName>Discovering American Spirit</fullName>
            </value>
            <value>
                <fullName>Discovering Marine Life</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Waves Physics</fullName>
            </value>
            <value>
                <fullName>Everyday Chemistry</fullName>
            </value>
            <value>
                <fullName>Exploring Marine Sciences</fullName>
            </value>
            <value>
                <fullName>Exploring Zoological</fullName>
            </value>
            <value>
                <fullName>Global Citizenship</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Leadership Strategies</fullName>
            </value>
            <value>
                <fullName>Personal Brand</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Properties of Motion</fullName>
            </value>
            <value>
                <fullName>Science Behind the Seeds</fullName>
            </value>
            <value>
                <fullName>Storytelling Drawings</fullName>
            </value>
            <value>
                <fullName>Techniques of Teamwork</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>