force-app/main/default/objects/Opportunity/fields/Disney_Meal_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Disney_Meal_Coupon__c</fullName>
    <label>Disney Meal Coupon</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>