force-app/main/default/objects/Opportunity/fields/Disney_Performance_Workshops__c.field-meta.xml
<CustomField>
    <fullName>Disney_Performance_Workshops__c</fullName>
    <label>Disney Performance Workshops</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acting 101</fullName>
            </value>
            <value>
                <fullName>Dance Technique</fullName>
            </value>
            <value>
                <fullName>Disney Auxiliration</fullName>
            </value>
            <value>
                <fullName>Disney Broadway Magic</fullName>
            </value>
            <value>
                <fullName>Disney Dancin&apos;</fullName>
            </value>
            <value>
                <fullName>Disney Fundamentals</fullName>
            </value>
            <value>
                <fullName>Disney Sings</fullName>
            </value>
            <value>
                <fullName>Jazz it Up</fullName>
            </value>
            <value>
                <fullName>Professional Insights</fullName>
            </value>
            <value>
                <fullName>Technically Speaking</fullName>
            </value>
            <value>
                <fullName>Your Instrumental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>