force-app/main/default/objects/Opportunity/fields/Disney_Theme_Park_Admissions__c.field-meta.xml
<CustomField>
    <fullName>Disney_Theme_Park_Admissions__c</fullName>
    <label>Disney Theme Park Admissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Day Base</fullName>
            </value>
            <value>
                <fullName>1 Day Park Hopper</fullName>
            </value>
            <value>
                <fullName>1 Day Premium</fullName>
            </value>
            <value>
                <fullName>2 Day Base</fullName>
            </value>
            <value>
                <fullName>2 Day Park Hopper</fullName>
            </value>
            <value>
                <fullName>2 Day Premium</fullName>
            </value>
            <value>
                <fullName>3 Day Base</fullName>
            </value>
            <value>
                <fullName>3 Day Park Hopper</fullName>
            </value>
            <value>
                <fullName>3 Day Premium</fullName>
            </value>
            <value>
                <fullName>4 Day Base</fullName>
            </value>
            <value>
                <fullName>4 Day Park Hopper</fullName>
            </value>
            <value>
                <fullName>4 Day Premium</fullName>
            </value>
            <value>
                <fullName>5 Day Base</fullName>
            </value>
            <value>
                <fullName>5 Day Park Hopper</fullName>
            </value>
            <value>
                <fullName>5 Day Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>