force-app/main/default/objects/Opportunity/fields/Double_Rate__c.field-meta.xml
<CustomField>
    <fullName>Double_Rate__c</fullName>
    <label>Double Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>