force-app/main/default/objects/Opportunity/fields/Double_Room__c.field-meta.xml
<CustomField>
    <fullName>Double_Room__c</fullName>
    <description>Number of Doubles for this Opportunity</description>
    <label>Double Room</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>