force-app/main/default/objects/Opportunity/fields/Draft_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Draft_Itinerary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has A Draft Itinerary Been Done</description>
    <label>Draft Itinerary</label>
    <type>Checkbox</type>
</CustomField>