force-app/main/default/objects/Opportunity/fields/Draft_Itinerary_Call__c.field-meta.xml
<CustomField>
    <fullName>Draft_Itinerary_Call__c</fullName>
    <label>Draft Itinerary Call</label>
    <type>DateTime</type>
</CustomField>