force-app/main/default/objects/Opportunity/fields/Early_Booking__c.field-meta.xml
<CustomField>
    <fullName>Early_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Booking</label>
    <type>Checkbox</type>
</CustomField>