force-app/main/default/objects/Opportunity/fields/Estimated_Air_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Air_Rate__c</fullName>
    <label>Estimated Air Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>