force-app/main/default/objects/Opportunity/fields/Estimated_Air_Seats_Needed__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Air_Seats_Needed__c</fullName>
    <label>Estimated Air Seats Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>