force-app/main/default/objects/Opportunity/fields/Facility_Feedback_From_Previous_Trip__c.field-meta.xml
<CustomField>
    <fullName>Facility_Feedback_From_Previous_Trip__c</fullName>
    <label>Facility Feedback From Previous Trip</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>