force-app/main/default/objects/Opportunity/fields/Fan_List__c.field-meta.xml
<CustomField>
    <fullName>Fan_List__c</fullName>
    <label>Fan List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Have Not Received List</fullName>
            </value>
            <value>
                <fullName>Not Sending List</fullName>
            </value>
            <value>
                <fullName>Received List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>