force-app/main/default/objects/Opportunity/fields/Fan_Swag_Bag__c.field-meta.xml
<CustomField>
    <fullName>Fan_Swag_Bag__c</fullName>
    <label>Fan Swag Bag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>