force-app/main/default/objects/Opportunity/fields/Final_Billed__c.field-meta.xml
<CustomField>
    <fullName>Final_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Billed</label>
    <type>Checkbox</type>
</CustomField>