force-app/main/default/objects/Opportunity/fields/Final_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Final_Itinerary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Final Itinerary Has Been Complete</description>
    <label>Final Itinerary</label>
    <type>Checkbox</type>
</CustomField>