force-app/main/default/objects/Opportunity/fields/Final_Payment__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment__c</fullName>
    <label>Final Payment</label>
    <type>Date</type>
</CustomField>