force-app/main/default/objects/Opportunity/fields/Final_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Received__c</fullName>
    <description>Date the team paid their Balance</description>
    <label>Final Payment Received</label>
    <type>Date</type>
</CustomField>