force-app/main/default/objects/Opportunity/fields/First_Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>First_Deposit_Received__c</fullName>
    <description>Date we received the 1st Deposit</description>
    <label>First Deposit Received</label>
    <type>Date</type>
</CustomField>