force-app/main/default/objects/Opportunity/fields/First_Draft_Feedback_From_Coach__c.field-meta.xml
<CustomField>
    <fullName>First_Draft_Feedback_From_Coach__c</fullName>
    <label>First Draft Feedback From Coach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>