force-app/main/default/objects/Opportunity/fields/FL_School_Competition__c.field-meta.xml
<CustomField>
    <fullName>FL_School_Competition__c</fullName>
    <label>FL School Competition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>