force-app/main/default/objects/Opportunity/fields/FL_School_Date_Of__c.field-meta.xml
<CustomField>
    <fullName>FL_School_Date_Of__c</fullName>
    <label>FL School Date Of Competition 1</label>
    <type>DateTime</type>
</CustomField>