force-app/main/default/objects/Opportunity/fields/FL_School_Date_of_Competition_2__c.field-meta.xml
<CustomField>
    <fullName>FL_School_Date_of_Competition_2__c</fullName>
    <label>FL School Date of Competition 2</label>
    <type>DateTime</type>
</CustomField>