force-app/main/default/objects/Opportunity/fields/FL_School_Official_Games_Picked_Up__c.field-meta.xml
<CustomField>
    <fullName>FL_School_Official_Games_Picked_Up__c</fullName>
    <label>FL School Official Games Picked Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>