force-app/main/default/objects/Opportunity/fields/FL_School_Opponent_1__c.field-meta.xml
<CustomField>
    <fullName>FL_School_Opponent_1__c</fullName>
    <label>FL School Opponent 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>