force-app/main/default/objects/Opportunity/fields/Food_Beverage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Food_Beverage_Notes__c</fullName>
    <label>Food &amp; Beverage Notes</label>
    <type>TextArea</type>
</CustomField>