force-app/main/default/objects/Opportunity/fields/fw1__CurrentGenerators__c.field-meta.xml
<CustomField>
    <fullName>fw1__CurrentGenerators__c</fullName>
    <label>zCurrent Generator(s) - OBSOLETE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>