force-app/main/default/objects/Opportunity/fields/fw1__DeliveryInstallationStatus__c.field-meta.xml
<CustomField>
    <fullName>fw1__DeliveryInstallationStatus__c</fullName>
    <label>zDelivery/Installation Status - OBSOLETE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Yet to begin</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>