force-app/main/default/objects/Opportunity/fields/fw1__MainCompetitors__c.field-meta.xml
<CustomField>
    <fullName>fw1__MainCompetitors__c</fullName>
    <label>zMain Competitor(s) - OBSOLETE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>