force-app/main/default/objects/Opportunity/fields/fw1__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>fw1__OrderNumber__c</fullName>
    <label>zOrder Number - OBSOLETE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>